[tool.poetry]
name = "esc-learner"
version = "0.1.0"
description = ""
authors = ["arrrrrmin <info@dotarmin.info>"]
readme = "README.md"
packages = [{include = "esc_learner"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "1.12.0"
torchaudio = "0.12.0"
numpy = "^1.23.2"
requests = "^2.28.1"
pandas = "^1.4.4"
tqdm = "^4.64.1"
scikit-learn = "^1.1.2"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.5.3"

[tool.black]
line-length = 120
target-version = ["py38"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
